# big_game

./: READEME.md  README.md  arm.sh  robot.sh
devel/: setup.sh
devel/include/object_locate/: apple_pos.h
devel/include/realsense_ros_camera/: Extrinsics.h  IMUInfo.h
devel/lib/arm_control/: arm_control_node
devel/lib/object_locate/: key_test  object_locate
devel/lib/pkgconfig/: arm_control.pc  object_locate.pc  realsense_ros_camera.pc  robot_key_control.pc  ros_pcduino.pc
devel/lib/python2.7/dist-packages/object_locate/msg/: __init__.py  _apple_pos.py
devel/lib/realsense_ros_camera/: realsense_ros_tests_camera
devel/lib/ros_pcduino/: car_control_node  griper_control_node  sensor_node
devel/share/arm_control/cmake/: arm_controlConfig.cmake
devel/share/common-lisp/ros/object_locate/msg/: _package.lisp  _package_apple_pos.lisp  apple_pos.lisp  object_locate-msg.asd
devel/share/gennodejs/ros/object_locate/msg/: _index.js  apple_pos.js
devel/share/object_locate/cmake/: object_locate-msg-paths.cmake  object_locateConfig.cmake
devel/share/realsense_ros_camera/cmake/: realsense_ros_camera-msg-paths.cmake  realsense_ros_cameraConfig.cmake
devel/share/robot_key_control/cmake/: robot_key_controlConfig.cmake
devel/share/ros_pcduino/cmake/: ros_pcduinoConfig.cmake
devel/share/roseus/ros/object_locate/: manifest.l
devel/share/roseus/ros/object_locate/msg/: apple_pos.l
devel/share/roseus/ros/realsense_ros_camera/: manifest.l
src/arm_control/: CMakeLists.txt
src/arm_control/src/: .arm_control.cpp.swp  arm_control.cpp  arm_control.cpp.bk
src/object_locate/: CMakeLists.txt  CMakeLists.txt.bk  package.xml
src/object_locate/include/: unistd.h
src/object_locate/launch/: demo_object.launch  demo_object.launch.bk
src/object_locate/msg/: apple_pos.msg
src/object_locate/src/: .apple_locate.cpp.swo  .apple_locate.cpp.swp  .robot_key_publisher.py.swp  apple_locate.cpp  darknet.cpp  key_test.cpp  object_locate.cpp
src/robot_key_control/: CMakeLists.txt
src/robot_key_control/src/: robot_key_publisher.py
src/ros_pcduino/: .CMakeLists.txt.swl  .CMakeLists.txt.swm  .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt
src/ros_pcduino/include/: apple_pos.h
src/ros_pcduino/launch/: demo_pcduino.launch
src/ros_pcduino/src/: .CMakeLists.txt.swp  .car.cpp.swp  .griper.cpp.swn  .griper.cpp.swo  .griper.cpp.swp  .pos_srobot.cpp.swp  .sensor_data.cpp.swn  .sensor_data.cpp.swo  .sensor_data.cpp.swp  .vi.swo  .vi.swp  car_node.cpp  griper.cpp  sensor_data.cpp
